[package]
name = "sample-target"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
windows-sys = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
] }
